edited the .config file

--- a/.ebextensions/.config
+++ b/.ebextensions/.config
@@ -4,8 +4,12 @@ container_commands:
     leader_only: true
 
 option_settings:
-  - namespace: aws:elasticbeanstalk:container:python
-    option_name: WSGIPath
-    value: lmsunsw/wsgi.py
-  - option_name: DJANGO_SETTINGS_MODULE
-    value: lmsunsw.settings
+  "aws:elasticbeanstalk:application:environment":
+    DJANGO_SETTINGS_MODULE: "lmsunsw.settings"
+    "PYTHONPATH": "/opt/python/current/app:$PYTHONPATH"
+  "aws:elasticbeanstalk:container:python":
+    WSGIPath: lmsunsw/wsgi.py
+    NumProcesses: 3
+    NumThreads: 20
+  "aws:elasticbeanstalk:container:python:staticfiles":
+    "/static/": "www/static/"
