--- a/.ebextensions/.config
+++ b/.ebextensions/.config
@@ -2,7 +2,9 @@ container_commands:
   01_syncdb:    
     command: "django-admin.py syncdb --noinput"
     leader_only: true
-  
+  02_populate:
+    command: "populate.py"
+    leader_only: true
 
 option_settings:
   "aws:elasticbeanstalk:application:environment":
