re-updated eb config file

--- a/.ebextensions/.config
+++ b/.ebextensions/.config
@@ -3,7 +3,7 @@ container_commands:
     command: "django-admin.py syncdb --noinput"
     leader_only: true
   02_populate:
-    command: "populate.py"
+    command: "python populate.py"
     leader_only: true
 
 option_settings:
