--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 awsebcli==3.2
 bcdoc==0.13.0
+boto==2.36.0
 botocore==0.99.0
 cement==2.4.0
 Django==1.7.7
@@ -10,12 +11,12 @@ django-fluent-contents==1.0rc3
 django-fluent-utils==1.1.4
 django-parler==1.3
 django-polymorphic==0.6.1
+django-storages==1.1.8
 django-tag-parser==2.0.1
 django-template-analyzer==1.4
 docutils==0.12
 future==0.14.3
 jmespath==0.6.1
-MySQL-python==1.2.3
 Pillow==2.7.0
 pyasn1==0.1.7
 Pygments==2.0.2
