--- a/.ebextensions/.config
+++ b/.ebextensions/.config
@@ -1,12 +1,12 @@
 container_commands:
   01_syncdb:    
-    command: "django-admin.py syncdb --noinput"
+    command: "python manage.py syncdb --noinput"
     leader_only: true
   02_populate:
     command: "python populate.py"
     leader_only: true
   03_collectstatic:
-    command: "django-admin.py collectstatic --noinput"
+    command: "python manage.py collectstatic --noinput"
     leader-only: true
 
 option_settings:
