--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ boto==2.36.0
 botocore==0.99.0
 cement==2.4.0
 Django==1.7.7
+django-autoslug==1.7.2
 django-crispy-forms==1.4.0
 django-parler==1.3
 django-session-security==2.2.3
