--- a/requirements.txt
+++ b/requirements.txt
@@ -3,19 +3,25 @@ bcdoc==0.13.0
 boto==2.36.0
 botocore==0.99.0
 cement==2.4.0
+Cython==0.22
 Django==1.7.7
 django-autoslug==1.7.2
 django-crispy-forms==1.4.0
 django-parler==1.3
+django-password-reset==0.7
 django-session-security==2.2.3
 django-storages==1.1.8
 django-tag-parser==2.0.1
 docutils==0.12
 future==0.14.3
+image==1.3.4
 jmespath==0.6.1
+numpy==1.9.2
+Pillow==2.8.1
 pyasn1==0.1.7
 Pygments==2.0.2
 python-dateutil==2.4.1
 pytz==2015.2
 PyYAML==3.11
 six==1.9.0
+wordcloud==1.0.0
