--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ docutils==0.12
 future==0.14.3
 image==1.3.4
 jmespath==0.7.0
+MySQL-python==1.2.5
 numpy==1.9.2
 Pillow==2.8.1
 pyasn1==0.1.7
@@ -24,4 +25,4 @@ python-dateutil==2.4.2
 pytz==2015.2
 PyYAML==3.11
 six==1.9.0
-git+git://github.com/amueller/word_cloud.git
+wordcloud==1.0.0
