updated eb deploy config file

--- a/.ebextensions/.config
+++ b/.ebextensions/.config
@@ -1,8 +1,13 @@
 container_commands:
-    01_migrate:
-        command: "django-admin.py migrate"
+    01_syncdb:    
+        command: "django-admin.py syncdb --noinput"
         leader_only: true
-
+    02_populate:
+        command: "python populate.py"
+        leader_only: true
+    03_collectstatic:
+        command: "django-admin.py collectstatic --noinput"
+        leader-only: true
 option_settings:
     "aws:elasticbeanstalk:application:environment":
         DJANGO_SETTINGS_MODULE: "lmsunsw.settings"
