--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 awsebcli==3.2.2
+backports.ssl-match-hostname==3.4.0.2
 bcdoc==0.13.0
 boto==2.36.0
 botocore==0.99.0
 cement==2.4.0
+certifi==14.5.14
 Cython==0.22
 Django==1.7.7
 django-autoslug==1.7.2
 django-crispy-forms==1.4.0
+django-model-utils==2.2
 django-parler==1.3
 django-password-reset==0.7
 django-session-security==2.2.3
@@ -24,5 +27,11 @@ Pygments==2.0.2
 python-dateutil==2.4.2
 pytz==2015.2
 PyYAML==3.11
+redis==2.10.3
 six==1.9.0
+sockjs-tornado==1.0.1
+SwampDragon==0.4.1.2
+SwampDragon-auth==0.1.3
+tornado==4.1
+tornado-redis==2.4.18
 wordcloud==1.0.0
