updated eb config file, added bootstrap notify js

--- a/.ebextensions/.config
+++ b/.ebextensions/.config
@@ -8,8 +8,12 @@ container_commands:
     03_collectstatic:
         command: "django-admin.py collectstatic --noinput"
         leader-only: true
-    04_deploy_dragon_server:
-        command: "python server.py & redis/src/redis-server & pwd"
+    04_deploy_redis_server:
+        command: "redis/src/redis-server > Output.out 2> Error.err < /dev/null &"
+        leader-only: true
+    05_deploy_dragon_server:
+        command: "python server.py > Output.out 2> Error.err < /dev/null &"
+        leader-only: true
 option_settings:
     "aws:elasticbeanstalk:application:environment":
         DJANGO_SETTINGS_MODULE: "lmsunsw.settings"
