try to get servers running on aws

--- a/.ebextensions/.config
+++ b/.ebextensions/.config
@@ -19,3 +19,28 @@ option_settings:
         NumThreads: 20
     "aws:elasticbeanstalk:container:python:staticfiles":
         "/static/": "static/"
+    "aws:cloudformation:template:parameter":
+        "InstancePort": 9999
+
+Resources:
+    AWSEBLoadBalancer:
+        Type: AWS::ElasticLoadBalancing::LoadBalancer
+        Properties:
+            Listeners:
+                - InstancePort: 80
+                  LoadBalancerPort: 80
+                  Protocol: TCP
+                - InstancePort: 9999
+                  LoadBalancerPort: 9999
+                  Protocol: TCP
+                - InstancePort: 6379
+                  LoadBalancerPort: 6379
+                  Protocol: TCP
+            AvailabilityZones:
+                - ap-southeast-2
+            HealthCheck:
+                Timeout: 5
+                Target: TCP:80
+                Interval: 30
+                HealthyThreshold: 3
+                UnhealthyThreshold: 5
