--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ Cython==0.22
 Django==1.7.7
 django-autoslug==1.7.2
 django-crispy-forms==1.4.0
+django-debug-toolbar==1.3.0
+django-model-utils==2.2
 django-parler==1.3
 django-password-reset==0.7
 django-session-security==2.2.3
@@ -25,3 +27,4 @@ python-dateutil==2.4.2
 pytz==2015.2
 PyYAML==3.11
 six==1.9.0
+sqlparse==0.1.15
