--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ MySQL-python==1.2.5
 numpy==1.9.2
 Pillow==2.8.1
 pyasn1==0.1.7
+python-memcached (1.54)
 Pygments==2.0.2
 python-dateutil==2.4.2
 pytz==2015.2
