added gzip compression, removed useless links on student navbar, removed populate from online deploy

--- a/.ebextensions/.config
+++ b/.ebextensions/.config
@@ -3,7 +3,7 @@ container_commands:
         command: "django-admin.py syncdb --noinput"
         leader_only: true
     02_populate:
-        command: "python populate.py"
+        command: "python manage.py createsu"
         leader_only: true
     03_collectstatic:
         command: "django-admin.py collectstatic --noinput"
