--- a/.ebextensions/.config
+++ b/.ebextensions/.config
@@ -1,4 +1,7 @@
 container_commands:
+    00_flush:
+        command: "python manage.py flush --noinput"
+        leader_only: true
     01_syncdb:    
         command: "django-admin.py syncdb --noinput"
         leader_only: true
