--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,7 @@ django-crispy-forms==1.4.0
 django-debug-toolbar==1.3.0
 django-model-utils==2.2
 django-parler==1.3
-django-password-reset==0.7
-django-session-security==2.2.3
+django-queryset-csv==0.3.0
 django-storages==1.1.8
 django-tag-parser==2.0.1
 docutils==0.12
