added createsu to config, increased post cache refresh time

--- a/.ebextensions/.config
+++ b/.ebextensions/.config
@@ -1,4 +1,7 @@
 container_commands:
+    00_createsu:
+        command: "python manage.py createsu"
+        leader_only: true
     01_syncdb:    
         command: "django-admin.py syncdb --noinput"
         leader_only: true
